--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     <h2 id="name">渡邉暢浩</h2>
     <dl id="properties">
         <dt>生年月日</dt>
-        <!-- dtは項目や内容 -->
         <dd class="red">平成6年10月6日</dd>
-        <!-- ddは項目や内容の説明 -->
         <dt>趣味</dt>
-        <dd>ダーツ　お酒　バスケ</dd>
+        <dd>ダーツ　お酒　バスケットボール</dd>
     </dl>
     <p class="red">よろしくお願いします</p>
 </body>
